RESOLVED FIXED173183
REGRESSION (r213584): WeChat app can not switch to next text field
https://bugs.webkit.org/show_bug.cgi?id=173183
Summary REGRESSION (r213584): WeChat app can not switch to next text field
Tim Horton
Reported 2017-06-09 14:47:24 PDT
REGRESSION (r213584): WeChat app can not switch to next text field
Attachments
Patch (2.38 KB, patch)
2017-06-09 14:47 PDT, Tim Horton
wenson_hsieh: review+
thorton: commit-queue-
Tim Horton
Comment 1 2017-06-09 14:47:39 PDT
Tim Horton
Comment 2 2017-06-09 15:15:55 PDT
Tim Horton
Comment 3 2017-06-09 15:35:24 PDT
Comment on attachment 312492 [details] Patch Geez, commit-queue, I beat you even though I had to freshly check out the repo :|
Tim Horton
Comment 4 2017-06-09 15:36:22 PDT
Note You need to log in before you can comment on or make changes to this bug.